corrected titles after rename

--- a/simple-typescript-webpack/package.json
+++ b/simple-typescript-webpack/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript-webpack",
+  "name": "simple-typescript-webpack",
   "version": "1.0.0",
   "description": "",
   "engines": {
